--- a/gallery.html
+++ b/gallery.html
@@ -2,10 +2,25 @@
 <html>
 
 	<head>
-		<title>Chern Ta's Profile Page</title>
+		<title>Chern Ta's Gallery Page</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="index.css">
 		<meta name="viewport" content="width=device-width">
+		<style>
+			.image-section img {
+				width: 300px;
+				height: 300px;
+			}
+
+			.image-section {
+				width: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: row;
+				flex-wrap: wrap;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -27,7 +42,7 @@
 			      			<a class="nav-link" href="gallery.html">Gallery</a>
 			      		</li>
 			      		<li class="nav-item dropdown">
-			      			<a class="nav-link dropdown-toggle" href="myfavourite.html" id="myfavourite" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Favourites
+			      			<a class="nav-link dropdown-toggle" href="#" id="myfavourite" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Favourites
 			      			</a>
 			     				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 			          				<a class="dropdown-item" href="books.html">Books</a>
@@ -43,25 +58,23 @@
 		<div class="container">
 			<article>
 				<header>
-				<h1 id="header">Hi! Welcome to my Profile Page!</h1>
+				<h1 id="header">Welcome to my Gallery Page!</h1>
 				</header>
 				<section>
 					<h2>Section</h2>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					In this section, you will find my portfolio of images!
 				</section>
-				<section>
-					<h2>Section</h2>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<section class="image-section">
+					<img id="" src="image/g-field.jpg" alt=""/>
+					
+					<img id="" src="image/g-fire.jpg" alt=""/>
+					<img id="" src="image/g-forest.jpg" alt=""/>
+					<img id="" src="image/g-house.jpg" alt=""/>
+					<img id="" src="image/g-seggau.jpeg" alt=""/>
+					<img id="" src="image/g-sky.jpg" alt=""/>
+					<img id="" src="image/g-top.jpeg" alt=""/>
+					<img id="" src="image/g-tree.jpg" alt=""/>
+
 				</section>
 				
 			</article>
