--- a/movies.html
+++ b/movies.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Chern Ta's Profile Page</title>
+		<title>Chern Ta's Favourite Movies list</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="index.css">
 		<meta name="viewport" content="width=device-width">
@@ -27,7 +27,7 @@
 			      			<a class="nav-link" href="gallery.html">Gallery</a>
 			      		</li>
 			      		<li class="nav-item dropdown">
-			      			<a class="nav-link dropdown-toggle" href="myfavourite.html" id="myfavourite" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Favourites
+			      			<a class="nav-link dropdown-toggle" href="#" id="myfavourite" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Favourites
 			      			</a>
 			     				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 			          				<a class="dropdown-item" href="books.html">Books</a>
@@ -43,25 +43,16 @@
 		<div class="container">
 			<article>
 				<header>
-				<h1 id="header">Hi! Welcome to my Profile Page!</h1>
+				<h1 id="header">Welcome to my Favourite Movies list!</h1>
 				</header>
 				<section>
 					<h2>Section</h2>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					In this section, you will find my list of favourite movies!
 				</section>
 				<section>
-					<h2>Section</h2>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<img id="" src="image/m-nemo.jpg" alt=""/>
+					<img id="" src="image/m-toy.jpg" alt=""/>
+					
 				</section>
 				
 			</article>
